--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>THE DOM PROTOCOL</title>
+  <title>ONLY ASCENDING</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -21,23 +21,23 @@
   <!-- Login Screen -->
   <div id="loginScreen" class="login-container">
     <div class="login-glass">
-      <div class="protocol-logo">THE DOM PROTOCOL</div>
-      <div class="login-subtitle">AUTHORIZED ACCESS ONLY</div>
+      <div class="protocol-logo">ONLY ASCENDING</div>
+      <div class="login-subtitle">EXCLSUIVE ACCESS</div>
       <div class="input-group-vertical">
         <input 
           type="text" 
           id="usernameInput" 
-          placeholder="Client ID"
+          placeholder="Username ID"
           class="glass-input"
         >
         <input 
           type="password" 
           id="passwordInput" 
-          placeholder="Access Code"
+          placeholder="Access Password"
           class="glass-input"
         >
       </div>
-      <button onclick="verifyPassword()" class="glass-button primary">INITIATE PROTOCOL</button>
+      <button onclick="verifyPassword()" class="glass-button primary">INITIATE ASCENSION</button>
       <div id="loginError" class="error-text"></div>
     </div>
   </div>
@@ -47,7 +47,7 @@
     
     <!-- Header -->
     <div class="header">
-      <div class="protocol-logo-small">THE DOM PROTOCOL</div>
+      <div class="protocol-logo-small">ONLY ASCENDING</div>
       <button onclick="logout()" class="glass-button ghost">TERMINATE SESSION</button>
     </div>
 
