--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="loginScreen" class="login-container">
     <div class="login-glass">
       <div class="protocol-logo">ONLY ASCENDING</div>
-      <div class="login-subtitle">EXCLSUIVE ACCESS</div>
+      <div class="login-subtitle">EXCLUSIVE ACCESS</div>
       <div class="input-group-vertical">
         <input 
           type="text" 
