--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
           class="glass-input"
         >
       </div>
-      <button onclick="login()" class="glass-button primary">INITIATE ASCENSION</button>
+      <button onclick="loginUser()" class="glass-button primary">INITIATE ASCENSION</button>
       <div id="loginError" class="error-text"></div>
       
       <div style="margin-top: 20px; text-align: center;">
