--- a/public/signup.html
+++ b/public/signup.html
@@ -24,24 +24,28 @@
           id="masterCodeInput" 
           placeholder="Master Access Code"
           class="glass-input"
+          autocomplete="off"
         >
         <input 
           type="text" 
           id="usernameInput" 
           placeholder="Choose Username"
           class="glass-input"
+          autocomplete="off"
         >
         <input 
           type="password" 
           id="passwordInput" 
           placeholder="Choose Password (min 6 chars)"
           class="glass-input"
+          autocomplete="off"
         >
         <input 
           type="text" 
           id="apiKeyInput" 
           placeholder="WaveSpeed API Key"
           class="glass-input"
+          autocomplete="off"
         >
       </div>
       
