--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,14 @@
           id="usernameInput" 
           placeholder="Username"
           class="glass-input"
+          autocomplete="off"
         >
         <input 
           type="password" 
           id="passwordInput" 
           placeholder="Password"
           class="glass-input"
+          autocomplete="off"
         >
       </div>
       <button onclick="loginUser()" class="glass-button primary">INITIATE ASCENSION</button>
